# CDPP

./: CDPP_Infos.txt  CLI_Commands.txt  Instructions_installing_PreviewNode.txt  README.md  create_keypair1.sh  create_keypair2.sh  create_keypair3.sh  create_keypair4.sh  payment.sh  payment_build.sh  payment_build_multiwitness.sh  payment_with_metadata.sh  payment_with_structured_metadata.sh  presentation_final_project.pptx  send_preview_testnet_faucet.sh
code/Demeter/5_Stablecoin/: CHANGELOG.md  Stablecoin.cabal
code/Demeter/5_Stablecoin/data/: 100.json  collateralDatumAlice.json  collateralDatumBob.json  oracleNFTMetadata.json  priceFeedOracleDatum.json
code/Demeter/5_Stablecoin/tmp/: nftUTXO.md
code/Demeter/5_Stablecoin/txoutputs/: burnStablecoin_dUSD.signed  burnStablecoin_dUSD.unsigned  consolidateUtxosAlice.signed  consolidateUtxosAlice.unsigned  consolidateUtxosBob.signed  consolidateUtxosBob.unsigned  deletePriceFeedOracle.signed  deletePriceFeedOracle.unsigned  deployValidator.signed  deployValidator.unsigned  liquidateStablecoin_dUSD.signed  liquidateStablecoin_dUSD.unsigned  mintOracleNFT.signed  mintOracleNFT.unsigned  mintStablecoin_dUSD.signed  mintStablecoin_dUSD.unsigned  putInitPriceFeedOracle.signed  putInitPriceFeedOracle.unsigned  updatePriceFeedOracle.signed  updatePriceFeedOracle.unsigned
code/Demeter/5_Stablecoin/validators/: buildAddrCollateral.sh  buildAddrPriceFeedOracle.sh  collateral.addr  collateral.plutus  collateral.policy  createCollateralPolicyID.sh  createMintingPolicyID.sh  createOracleNFTPolicyID.sh  minting.plutus  (+7 more)
(+203 files in other folders)
